[package]
name = "fnv64-rs"
version = "0.1.0"
edition = "2021"
authors = ["Dante Doménech Martínez <dante19031999@gmail.com>"]
description = "A lightweight, zero-dependency implementation of the FNV (Fowler–Noll–Vo) hash function."
license = "Apache-2.0"
repository = "https://github.com/youruser/your-repo"
readme = "README.MD"
keywords = ["hash", "fnv", "hasher", "performance"]
categories = ["algorithms", "no-std"]

[features]
default = []
std = []
nightly = []

[dependencies]
# No dependencies needed for this implementation!

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]